# labware_detection

./: CMakeLists.txt  README.md  package.xml
launch/: pc_slam.launch
scripts/: color_templates.txt  marker_position.txt  marker_publish.py  obb_detection.py  obb_detection_rgb_.py  obb_publisher.py  obb_publisher_node.py  obb_utils.py  pointcloud_merge.py  publish_obb.py  slam_points_sol_prep.txt  test.txt
